--- a/Listing.html
+++ b/Listing.html
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="cardBtns">
                                     <button class="chevAv" type="button" class="btn btn-primary chevAv" data-bs-toggle="modal" data-bs-target="#exampleModal">Check Availablity</button>
-                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>>
+                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="cardBtns">
                                     <button class="chevAv" type="button" class="btn btn-primary chevAv" data-bs-toggle="modal" data-bs-target="#exampleModal">Check Availablity</button>
-                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>>
+                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="cardBtns">
                                     <button class="chevAv" type="button" class="btn btn-primary chevAv" data-bs-toggle="modal" data-bs-target="#exampleModal">Check Availablity</button>
-                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>>
+                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                 </div>
                                 <div class="cardBtns">
                                     <button class="chevAv" type="button" class="btn btn-primary chevAv" data-bs-toggle="modal" data-bs-target="#exampleModal">Check Availablity</button>
-                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>>
+                                    <a class="viewMr" href="/ViewDetails.html">View Details</a>
                                 </div>
                             </div>
                         </div>
