--- a/ViewDetails.html
+++ b/ViewDetails.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Next Page</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,24 @@
             <div class="container p-0">
                 <a class="backBtn" href="/Listing.html"><i class="bi bi-chevron-left backIcon"></i>Back to Listing</a>
 
-               <img class="itemImg" src="img/img1.webp">
+               <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/img1.webp" class="d-block w-100" alt="img/img1.webp">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/img1.webp" class="d-block w-100" alt="img/img1.webp">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/img1.webp" class="d-block w-100" alt="img/img1.webp">
+                    </div>
+                </div>  
+              </div>
 
                 <div class="carDetails">
                     <p class="carModel">2024 RAM 3500</p>
@@ -114,7 +132,6 @@
     
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 <!-- <script>
     var myCarousel = new bootstrap.Carousel(document.getElementById('carouselExampleIndicators'), {
