--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
         <footer class="footerSec">
             <div class="container footerTop">
                 <img class="footerImg" src="img/footerLogo.webp">
-                <p>AllAutosListed.com specializes in finding you the best deal on used cars, trucks, & SUVs. We scan thousands of dealerships daily to find car listings that are perfect for our users. We have over 1.5 million vehicle listings in our database and growing! If you are buying or selling a used auto, check us out to make sure you are getting the best car deal. Get the best prices on cars.</p>
-                <p>Vehicles in Ad: Estimated Payment Calculation based on 2.99% APR, 72 month financing, and $2000 down payment. Tax, tags, title, administration fees, and license fees are not included in price or payment. Subject to approved buyer credit. Actual purchase terms may vary.</p>
+                <div class="footerContent">
+                    <p>AllAutosListed.com specializes in finding you the best deal on used cars, trucks, & SUVs. We scan thousands of dealerships daily to find car listings that are perfect for our users. We have over 1.5 million vehicle listings in our database and growing! If you are buying or selling a used auto, check us out to make sure you are getting the best car deal. Get the best prices on cars.</p>
+                    <p>Vehicles in Ad: Estimated Payment Calculation based on 2.99% APR, 72 month financing, and $2000 down payment. Tax, tags, title, administration fees, and license fees are not included in price or payment. Subject to approved buyer credit. Actual purchase terms may vary.</p>
+                </div>
             </div>
-            <div class="container footerBtm">
+            <div class="footerBtm">
                 <p>Copyright © 2024WHIPDEALS. All Rights Reserved. </p>
             </div>
         </footer>
