--- a/Listing.html
+++ b/Listing.html
@@ -32,22 +32,24 @@
         <section class="container-fluid p-3">
             <div class="container p-0">
                 <form class="content-sec listingSec">
-                    <div class="topFilter">
-                        <button class="editSrch">Edit Search</button>
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Search Best Value
-                            </button>
-                            <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">Price ( Low to High )</a></li>
-                              <li><a class="dropdown-item" href="#">Price ( High to Low )</a></li>
-                              <li><a class="dropdown-item" href="#">Distance ( Near to Far)</a></li>
-                              <li><a class="dropdown-item" href="#">Mileage ( Low to High)</a></li>
-                              <li><a class="dropdown-item" href="#">Mileage ( High to Low )</a></li>
-                            </ul>
+                    <div class="topSec">
+                        <h4>Found 10 Vehicles Near 40403</h4>
+                        <div class="topFilter">
+                            <button class="editSrch">Edit Search</button>
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Search Best Value
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" href="#">Price ( Low to High )</a></li>
+                                  <li><a class="dropdown-item" href="#">Price ( High to Low )</a></li>
+                                  <li><a class="dropdown-item" href="#">Distance ( Near to Far)</a></li>
+                                  <li><a class="dropdown-item" href="#">Mileage ( Low to High)</a></li>
+                                  <li><a class="dropdown-item" href="#">Mileage ( High to Low )</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                    <h4>Found 10 Vehicles Near 40403</h4>
                     <div class="cardItems">
                         <div class="cardListing">
                             <h5>2022 Hyundai Elantra SEL</h5>
@@ -232,10 +234,12 @@
         <footer class="footerSec">
             <div class="container footerTop">
                 <img class="footerImg" src="img/footerLogo.webp">
-                <p>AllAutosListed.com specializes in finding you the best deal on used cars, trucks, & SUVs. We scan thousands of dealerships daily to find car listings that are perfect for our users. We have over 1.5 million vehicle listings in our database and growing! If you are buying or selling a used auto, check us out to make sure you are getting the best car deal. Get the best prices on cars.</p>
-                <p>Vehicles in Ad: Estimated Payment Calculation based on 2.99% APR, 72 month financing, and $2000 down payment. Tax, tags, title, administration fees, and license fees are not included in price or payment. Subject to approved buyer credit. Actual purchase terms may vary.</p>
+                <div class="footerContent">
+                    <p>AllAutosListed.com specializes in finding you the best deal on used cars, trucks, & SUVs. We scan thousands of dealerships daily to find car listings that are perfect for our users. We have over 1.5 million vehicle listings in our database and growing! If you are buying or selling a used auto, check us out to make sure you are getting the best car deal. Get the best prices on cars.</p>
+                    <p>Vehicles in Ad: Estimated Payment Calculation based on 2.99% APR, 72 month financing, and $2000 down payment. Tax, tags, title, administration fees, and license fees are not included in price or payment. Subject to approved buyer credit. Actual purchase terms may vary.</p>
+                </div>
             </div>
-            <div class="container footerBtm">
+            <div class="footerBtm">
                 <p>Copyright © 2024WHIPDEALS. All Rights Reserved. </p>
             </div>
         </footer>
